<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAmt" />

    <EditText
        android:id="@+id/editAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edAmt"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNumofPax" />

    <EditText
        android:id="@+id/editNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/togService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togSC" />

        <ToggleButton
            android:id="@+id/togGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togGst" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDiscount" />

    <EditText
        android:id="@+id/edDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edDiscount"
        android:inputType="number"/>

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radCash" />

        <RadioButton
            android:id="@+id/radPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radPaynow" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/togSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togSplit" />

        <ToggleButton
            android:id="@+id/togReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togReset" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/textEachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>